Addressed and readdresed some notes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1452,6 +1452,20 @@ url = {http://www.swi-prolog.org/pldoc/man?section=SyntaxAndSemantics}
   year={1978},
   publisher={Elsevier}
 }
+@misc{website:timelineproglangwiki,
+title = {Timeline of programming languages},
+author = {Wikipedia},
+month = {November},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Timeline\_of\_programming\_languages}
+}
+@misc{website:historyofproglang,
+title = {Programming Languages Through the Years},
+author = {Software Guild},
+month = {July},
+year = {2015},
+url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
+}
 @comment{website:,
 title = ,
 author = ,
