--- a/proto1.tex
+++ b/proto1.tex
@@ -350,8 +350,7 @@ Moreover, the primitives of the language\endnote{%
   Adopted from \cite{website:understandingalgebrasfpcomplete}
 }
 are not accessible as the language can have expressions of only one
-type i.e.
-\yyy{"}{``}Term\yyy{"}{''}.
+type i.e. ``Term''.
 
 \begin{comment}
 \begin{minted}[linenos]{haskell}
@@ -440,13 +439,13 @@ and how to represent it generically to perform operations on it since,
 (FlatTerm a) != (FlatTerm (FlatTerm a))
 \end{minted}
 %
-because with our original grammar all the expression that could be defined would be represented by a single entity \yyy{"}{``}Term\yyy{"}{''} no matter how
+because with our original grammar all the expression that could be defined would be represented by a single entity ``Term'' no matter how
 infinitely deep they were.
 
-The approach to tackling this problem is to find the \yyy{"}{``}fixed-point\yyy{"}{''}.
+The approach to tackling this problem is to find the ``fixed-point''.
 After infinitely many iterations we should get to a fixed point where further iterations make no
 difference.
-It means that applying one more ExprF would not change anything – a fix point does not move under FlatTerm.
+It means that applying one more FlatTerm would not change anything – a fix point does not move under FlatTerm.
 
 \progLang{Haskell} provides it in two forms,\endnote{%
   Why do you need to discuss value fixed points (\textit{i.e.,} \texttt{\bfseries fix})?  Do you need them?
@@ -670,7 +669,7 @@ This is shown in Figure~\ref{tab:zipMatch}.
 \end{code-list}
 
 \paragraph{Logic Variables}
-Unification involves side effects of binding logic variables to terms. To allow and keep track of these effects we use the Binding Monad
+Unification involves side effects of binding logic variables to terms. To allow and keep track of these effects we use the binding monad
 which provides facilities to generate fresh logic variables and perform look ups on dictionaries. By default two logic variable
 implementations exist,\endnote{%
   In this immediate region, I (dgc) removed text inserted by a failed push or pull merge.
