--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -111,7 +111,9 @@ There are a lot of people working on this but, I found a lot of papers of two of
   Possibly one of the most important works towards bringing programming styles together is the book by C.A.R.
   Hoare \cite{hoare1998unifying} which points out that among the large number of programming paradigms and/or
   theories the unification theory serves as a complementary rather than a replacement to relate the universe.
-  As as always since we are talking about \progLang{Haskell} we have to include monads and unifying theories using
+  As as always since we are talking about \progLang{Haskell} we have to\endnote{%
+  Use ``must'' in place of ``have to'' where you can.
+}\elabel{must-have-to} include monads and unifying theories using
   monads \cite{gibbons2013unifying}.
  
 
