--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -65,7 +65,7 @@ discussed below{\large,} along with their shortcomings.
 \item
   Moreover, none of the above have natural list support that exist in \progLang{Prolog}.\endnote{%
     What does this point mean?
-    I would have to think I do not remember.
+    I would have to think\yyy{}{\Large;} I do not remember.
 }
 \end{enumerate}
 
