--- a/toDo.tex
+++ b/toDo.tex
@@ -265,6 +265,8 @@ What is the overall message?
 \paragraph{A List of Colloquialisms}
 \begin{enumerate}
 \item
+  another new kid on the block.
+\item
   ``Recap'' should be ``recapitulation''.
 \item
   Some expressions indicating change over time, for instance:
