--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -220,8 +220,9 @@ which inside contain Exprs, and so on. It's trees all the way down.
 
 But recursion can be abstracted away to uncover the real primitives behind expressions. The trick is to define a non-recursive function and then find its fixed point.
 
-Since here we are dealing with types, we have to define a type function, otherwise known as type constructor. Here's the non-recursive precursor of our grammar (later you'll see that the F 
-in ExprF stands for functor):
+Since here we are dealing with types, we have to\eref{must-have-to} define a type function, otherwise known as type
+constructor.
+Here's the non-recursive precursor of our grammar (later you'll see that the F in ExprF stands for functor):
 
 \begin{minted}[linenos]{haskell}
 ExprF a = Const Int
