--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -67,8 +67,8 @@
 \newcommand{\progLang}[1]{\textsc{#1}}
 \newcommand{\chapterReference}[2]{\textcolor{blue}{\underline{\hyperref[#1]{#2}}}}
 
-%\textcolor{blue}{\underline{\hyperref[sect:embedding]{Chapter 5}}}
-
+\definecolor{dark-purple}{rgb}{0.40,0.05,0.40}\relax
+\definecolor{fuchsia}{rgb}{0.99,0.50,0.99}\relax
 
 % This is needed to include figures
 % \usepackage{graphicx}
