--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -68,6 +68,8 @@
 \newcommand{\chapterReference}[2]{\textcolor{blue}{\underline{\hyperref[#1]{#2}}}}
 
 \definecolor{dark-purple}{rgb}{0.40,0.05,0.40}\relax
+\definecolor{dark-red}{rgb}{0.50,0.00,0.00}\relax
+\definecolor{dark-green}{rgb}{0.00,0.50,0.00}\relax
 \definecolor{fuchsia}{rgb}{0.99,0.50,0.99}\relax
 
 % This is needed to include figures
